--- a/src/app/recipe-book/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipe-book/recipe-edit/recipe-edit.component.html
@@ -1,3 +1,39 @@
-<p>
-  recipe-edit works!
-</p>
+<div class="row">
+  <div class="col-xs-12">
+    <form>
+      <div class="row">
+        <div class="col-xs-12">
+          <button type="button" name="button" class="btn btn-success">Save</button>
+          <button type="button" name="button" class="btn btn-danger">Cancel</button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="name">Name</label>
+            <input
+            type="text"
+            id="name"
+            class="form-control">
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="imagePath">Image URL</label>
+            <input
+            type="text"
+            id="imagePath"
+            class="form-control">
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <img src="" class="img-responsive">
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
