--- a/src/app/recipe-book/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipe-book/recipe-edit/recipe-edit.component.html
@@ -1,10 +1,10 @@
 <div class="row">
   <div class="col-xs-12">
-    <form>
+    <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
       <div class="row">
         <div class="col-xs-12">
-          <button type="button" name="button" class="btn btn-success">Save</button>
-          <button type="button" name="button" class="btn btn-danger">Cancel</button>
+          <button type="submit" name="button" class="btn btn-success" [disabled]="!recipeForm.valid">Save</button>
+          <button type="button" name="button" class="btn btn-danger" (click)="onCancel()">Cancel</button>
         </div>
       </div>
       <div class="row">
@@ -14,6 +14,7 @@
             <input
             type="text"
             id="name"
+            formControlName="name"
             class="form-control">
           </div>
         </div>
@@ -25,13 +26,47 @@
             <input
             type="text"
             id="imagePath"
-            class="form-control">
+            formControlName="imagePath"
+            class="form-control" #imagePath>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <img src="" class="img-responsive">
+          <img [src]="imagePath.value" class="img-responsive">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="description">Description</label>
+            <textarea
+            type="text"
+            id="description"
+            formControlName="description"
+            class="form-control" rows="6"></textarea>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12" formArrayName="ingredients">
+          <div class="row" *ngFor="let ingredientCtrl of recipeForm.get('ingredients').controls; let i = index;" [formGroupName]="i" style="margin-top: 10px;">
+            <div class="col-xs-8">
+              <input type="text" class="form-control" formControlName="name">
+            </div>
+            <div class="col-xs-2">
+              <input type="number" class="form-control" formControlName="amount">
+            </div>
+            <div class="col-xs-2">
+              <button type="button" (click)="onDeleteIngredient(i)" class="btn btn-danger">X</button>
+            </div>
+          </div>
+          <hr>
+          <div class="row">
+            <div class="col-xs-12">
+              <button type="button" class="btn btn-success" (click)="onAddIngredient()">Add ingredient</button>
+            </div>
+          </div>
         </div>
       </div>
     </form>
